webapp-k8s/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: webapp
  labels:
    name: webapp
